--- a/abBX/UniversalSoundToLight/UniversalSoundToLight.vbproj
+++ b/abBX/UniversalSoundToLight/UniversalSoundToLight.vbproj
@@ -85,6 +85,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Light.vb" />
+    <Compile Include="Mix.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
