--- a/abBX/UniversalSoundToLight/UniversalSoundToLight.vbproj
+++ b/abBX/UniversalSoundToLight/UniversalSoundToLight.vbproj
@@ -77,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ambx.vb" />
+    <Compile Include="ColorFreqency.vb" />
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
